@@ -19,4 +19,13 @@
 # Reworked the code for jojo and outlander trigger words 
 # Optimized the code for all code except the rune random system which will be reworked in the next update
 #
-
+# Alpha 0.3 The social update (07/07/2020)
+#
+# Added the _roast command that serves to keep the bot superiority of the humans
+# Added the possibility of engaging on a conversation with the bot when you mention it
+# Added the _random command that sorts a number between 1 and 100
+# Added the _bored command that the bot gives ideas for the humans to entretain themselfs
+# Added the friendship meters to the bot
+# Added the possibility of having reminders on the bot (ONLY IN HOURS)  
+# Resolved the issue that was blocking the jojo and outlander trigger words to run
+# Reworked the rune system
